Add reverse feature

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <h1>Vice Versa</h1>
-<form action=" ">
+<form action="{% url 'reverse' %}">
 	<textarea name="usertext" rows="4" colls="25" autofocus > 		Please enter your text	
 	</textarea>
 	<br><br>
