--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -1,5 +1,5 @@
-<h1>Original Text</h1>
+<h1>Original Text 2</h1>
 
 <h2>{{usertext}}</h2>
 <h1>Reversed Text</h1>
-<p> {{reversed_text}}  </p>
+<p> {{reversed_text}} </p>
