Add words count feature

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Vice Versa</h1>
 <form action="{% url 'reverse' %}">
-	<textarea name="usertext" rows="4" colls="25" autofocus > 		Please enter your text	
+	<textarea placeholder="Please enter your text" name="usertext" rows="4" colls="25" autofocus > 
 	</textarea>
 	<br><br>
 	<input type="submit" value="Reverse!">
